# keep-workflows

./: .gitignore  Dockerfile  README.md  pyproject.toml  replace_extra_data.py
.github/workflows/: test-pr-e2e.yml
docs/: alert-automation-pre-discovery.docx  alert-automation-pre-discovery.md  alert-automation-project.docx  alert-automation-project.md
examples/workflows/: db_disk_space_monitor.yml  elastic_enrich_example.yml  ifelse.yml  incident-tier-escalation.yml  openshift_monitoring_and_remediation.yml  permissions_example.yml  query_clickhouse.yml  raw_sql_query_datetime.yml  workflow_only_first_time_example.yml  workflow_start_example.yml
src/: main.py
src/actions/: actions_factory.py
src/api/: api.py  arq_worker_debug_patch.py  config.py  middlewares.py
src/common/: arq_pool.py  consts.py  logging.py  observability.py  redis_settings.py
src/common/core/: db.py  (+13 more)
src/conditions/: assert_condition.py  base_condition.py  condition_factory.py  stddev_condition.py  threshold_condition.py
src/contextmanager/: contextmanager.py
src/functions/: __init__.py  cyaml.py
src/identitymanager/: authverifierbase.py  identitymanager.py  identitymanagerfactory.py
src/iohandler/: iohandler.py
src/parser/: parser.py
src/providers/: providers_factory.py  providers_service.py
src/routes/: workflows.py
src/rulesengine/: rulesengine.py
src/searchengine/: searchengine.py
src/secretmanager/: awssecretmanager.py  dbsecretmanager.py  filesecretmanager.py  gcpsecretmanager.py  kubernetessecretmanager.py  secretmanager.py  secretmanagerfactory.py  vaultsecretmanager.py
src/step/: step.py
src/throttles/: base_throttle.py  one_until_resolved_throttle.py  throttle_factory.py
src/workflowmanager/: workflow.py  workflowmanager.py  workflowscheduler.py  workflowstore.py
tests/: conftest.py  test_alertenrichment_phase2.py  test_alertenrichment_removal.py  test_auth_session_reuse.py  test_dismissal_expiry_watcher.py  test_incident_enrichment_table.py  test_workflow_api.py  test_workflow_cel_filter.py  test_workflow_execution.py  test_workflow_filters.py  test_workflow_severity_comparisons.py  test_workflowmanager.py  test_workflows.py  test_workflows_update.py  test_workflowstore.py
tests/fixtures/: client.py  workflow_manager.py
tests/workflows/: db_disk_space_for_testing.yml  providers_for_testing.yaml  reusable_actions_for_testing.yml  reusable_alert_for_testing.yml  (+1 more)
(+82 files in other folders)
