[tool.poetry]
name = "keep-workflows"
version = "0.50.3.2"
description = "Workflow engine service for Keep"
authors = ["Keep Alerting LTD"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
click = "^8.1.3"
pyyaml = "^6.0"
requests = "^2.32.4"
elasticsearch = "^8.6.1"
chevron = "^0.14.0"
python-dotenv = "^0.21.1"
pydantic = "^1.10.4"
python-json-logger = "^2.0.6"
boto3 = "^1.26.72"
validators = "0.34.0"
fastapi = "^0.115.6"
uvicorn = "0.32.1"
aiokafka = "^0.11.0"
starlette-context = "^0.3.6"
sqlmodel = "^0.0.22"
cloud-sql-python-connector = "1.12.0"
pymysql = "^1.1.1"
google-cloud-secret-manager = "^2.16.1"
sqlalchemy = "^2.0.14"
sqlalchemy-utils = "^0.41.0"
opentelemetry-sdk = "1.29.0"
opentelemetry-instrumentation-fastapi = "0.50b0"
opentelemetry-instrumentation-logging = "0.50b0"
opentelemetry-instrumentation-sqlalchemy = "0.50b0"
opentelemetry-instrumentation-requests = "0.50b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
opentelemetry-exporter-otlp-proto-http = "^1.20.0"
python-multipart = "^0.0.18"
kubernetes = "^27.2.0"
pusher = "^3.3.2"
gunicorn = "^23.0.0"
cel-python = "^0.1.5"
hvac = "^2.1.0"
python-keycloak = "4.2.3"
alembic = "^1.13.2"
google-auth = "2.34.0"
json5 = "^0.9.28"
psycopg-binary = "^3.2.3"
psycopg = "^3.2.3"
prometheus-client = "^0.21.1"
psycopg2-binary = "^2.9.10"
urllib3 = "<2.4.0"
prometheus-fastapi-instrumentator = "^7.0.0"
slowapi = "^0.1.9"
retry2 = "^0.9.5"
pympler = "1.0.1"
PyJWT = "^2.8.0"
setuptools = "^80.9.0"
pytz = "^2024.1"
arq = "0.26.3"
astunparse = "^1.6.3"
asteval = "^1.0.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pre-commit-hooks = "^4.4.0"
yamllint = "^1.29.0"
black = "^24.3.0"
isort = "^5.12.0"
autopep8 = "^2.0.1"
flake8 = "^6.0.0"
coverage = "^7.2.2"
ruff = "^0.11.4"
playwright = "^1.44.0"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-mock = "^3.11.1"
pytest-docker = "^3.1.1"
pytest-asyncio = "^0.25.0"
pytest-timeout = "^2.3.1"
docstring-parser = "^0.16"
freezegun = "^1.5.1"
jinja2 = "^3.1.6"
tenacity = "^9.1.4"
isodate = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F405", "F811", "E712", "E711", "F403"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
